--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -10,7 +10,7 @@ nav,
   display: flex;
   align-items: center;
   justify-content: space-between;
-  z-index: 9999;
+  z-index: 4;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
 }
 
@@ -52,7 +52,7 @@ nav ul li {
     right: 0;
     bottom: 0;
     background: #fff;
-    z-index: 200;
+    z-index: 4;
     width: 220px;
     padding-top: 70px;
     transition: right 0.4s cubic-bezier(0.4, 0, 0.2, 1);
